--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:build": "docker image build . -t thinkful-ed/zid-fe-react-state-management-xx-assignment",
+    "docker:run": "docker run --rm -it -p 3000:3000 thinkful-ed/zid-fe-react-state-management-xx-assignment",
+    "docker:stop": "docker stop $(docker ps -q)",
+    "docker:test": "docker run -t  thinkful-ed/zid-fe-react-state-management-xx-assignment npm test",
+    "start:solution": "npm run -it docker:build && npm run docker:run",
+    "test:solution": "npm run docker:build && npm run docker:test"
   },
   "eslintConfig": {
     "extends": [
