--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "prebuild": "env CI=true react-scripts",
+    "postbuild": "echo 'After Build'",
+    "predeploy": "npm run build",
+    "deploy": "vercel --prod",
+    "postdeploy": "echo 'Post Deploy'",
     "docker:build": "docker image build . -t thinkful-ed/zid-fe-react-state-management-xx-assignment",
     "docker:run": "docker run --rm -it -p 3000:3000 thinkful-ed/zid-fe-react-state-management-xx-assignment",
     "docker:stop": "docker stop $(docker ps -q)",
     "docker:test": "docker run -t  thinkful-ed/zid-fe-react-state-management-xx-assignment npm test",
     "start:solution": "npm run -it docker:build && npm run docker:run",
     "test:solution": "npm run docker:build && npm run docker:test"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
